language_tests/source_files/invalid/async_closures.tr
func badAwait() async {
    let f = || async { 1 as int32 }

    let _ = f()
}

func badAwaitTask() async {
    let task = std.futures.spawn(|| async { 1 as int32 })

    let _ = await task
}

func badSpawnSync() async {
    let _ = std.futures.spawn(|| -> int32 { 1 })
}

func badSpawnArg() async {
    let _ = std.futures.spawn(|x: int32| async { x })
}

func badSyncTaskValue() {
    let task = std.futures.spawn(|| async { 1 as int32 })

    let _ = task.value()
}
